cluster/base/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: calibre
  labels:
    app: calibre
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: linuxserver/calibre:9.16.0
        ports:
        - containerPort: 8081
          name: webserver
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-config
