cluster/base/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: webserver
