cluster/base/calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: calibre.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre
            port:
              number: 8081
  tls:
  - hosts:
    - calibre.example.com
    secretName: calibre-tls
